Migrate to new JDK 9 parameter syntax